This is just to motivate myself to improve a little bit every day :)

Best: 26

18-04-2024
Streak: 26
Learned:
Did:
    -Add support for all Locales that have their ordinal rules listed at
        https://www.unicode.org/cldr/cldr-aux/charts/36.1/supplemental/language_plural_rules.html

17-04-2024
Streak: 25
Learned:
Did:
    -Update en and nl strings to only populate the plural forms they use, add NL to Locale lib
    -Add Locales from Azerbaijani .. Danish

16-04-2024
Streak: 24
Learned:
Did:
    -Add ordinal strings as string array (try to find what works within compose multiplatform
        limitations, without relying on expect/actual workarounds)
    -Start implementing my own library for fetching Ordinal rules per locale. I'm stubborn so I'd
        rather do this than rely on Moko for Resource Management, or implement it with expect/actual

15-04-2024
Streak: 23
Learned:
    -Read about localising ordinal numbers with plural strings,
        most likely need to use MessageFormat but need to read more about how it works
        and whether it is available in compose multiplatform
Did:

14-04-2024
Streak: 22
Learned:
Did:
    -Ensure SeasonInfo is populated with correct info,
        using inaccurate calculation of Solstices & Equinoxes
    -Clean up logic for making days tick over at 4am instead of midnight
    -Make CalendarState directly accessible to main menu, change background and title based on
        seasonal information.
    -Fix coroutine wake-up logic
    -Add strings for seasons
    -Add Composeable resource functions for seasons
    -Reorganise backlog into directory with separate files
        (this will also let me save notes I'm done with)

13-04-2024
Streak: 21
Learned:
    - Read about Solar Seasons.
Did:
    -Add strings for equinoxes, solstices, and seasonal festivals
    -Rewrite CalendarFragment to use a CalendarState data class, instead of only emitting DayOfWeek